--- a/app/src/main/res/layout/fragment_countries.xml
+++ b/app/src/main/res/layout/fragment_countries.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
 
-    android:text="FLAG GUESS"/>
+    android:text="COUNTRIES"/>
 
 </LinearLayout>
